[project]
name = "bootcamp"
version = "0.1.0"
description = "bootcamp-training"
authors = [
    {name = "Ashwin K"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
